# MessengerAgent

./: main.py  pyproject.toml
common/: crawling.py
common/util/: auth_util.py  debug_util.py  email_sender.py  text_util.py
kakaotalk_capture/: __init__.py  kakaotalk_capture.py
