[project]
name = "messengeragent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "jwt>=1.3.1",
    "passlib>=1.7.4",
    "pyautogui>=0.9.54",
    "pydantic[email]>=2.11.5",
    "pyjwt>=2.10.1",
    "pyperclip>=1.9.0",
    "uvicorn>=0.34.2",
]
